tests/error_messages/unknown_attribute.stderr
error: unknown rotalubat attribute, expected `mode`
 --> tests/error_messages/unknown_attribute.rs:4:13
  |
4 | #[rotalubat(unknown = "value")]
  |             ^^^^^^^
