tests/error_messages/unknown_attribute.rs
use rotalubat::Rotalubat;

#[derive(Rotalubat)]
#[rotalubat(unknown = "value")]
enum Foo {
    A,
    B,
}

fn main() {}
